--- a/web_1.html
+++ b/web_1.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang='en'>
 	<head>
-		<!--- Add script for Audiences---->
+		<!--- Add script for Audiences
 		<script>
 		window[‘my_variable’] = function(){
 		Return ‘myuserid’
 		};
-		</script>
+		</script> ---->
+		
 	 <!---<script src="https://cdn.optimizely.com/js/29787271022.js"></script>  --->
   
     <meta charset='utf-8'>
