--- a/web_1.html
+++ b/web_1.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang='en'>
 	<head>
+		<script>
+	window['optimizely'] = window['optimizely'] || [];
+window.optimizely.push(['setUserId', 'user123']); 
+</script>
     <meta charset='utf-8'>
     <meta content='IE=edge' http-equiv='X-UA-Compatible'>
     <meta content='width=device-width, initial-scale=1' name='viewport'>
