--- a/web_2.html
+++ b/web_2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang='en'>
 	<head>
-		<script type="javascript">    window.some_id_variable = "some_random_id"</script>
+		<script type="javascript">    window.some_id_variable = "visitorId"</script>
     <meta charset='utf-8'>
     <meta content='IE=edge' http-equiv='X-UA-Compatible'>
     <meta content='width=device-width, initial-scale=1' name='viewport'>
