--- a/web_2.html
+++ b/web_2.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang='en'>
   <head>
-    <script> window.visitorId = "the_visitor_id_123"</script>
+	 <script>  window['optimizely'] = window['optimizely'] || [];
+window.optimizely.push(['visitorId', 'the_visitor_id_123']); 
+</script>
+<!--     <script> window.visitorId = "the_visitor_id_123"</script> -->
     <meta charset='utf-8'>
     <meta content='IE=edge' http-equiv='X-UA-Compatible'>
     <meta content='width=device-width, initial-scale=1' name='viewport'>
