--- a/web_2.html
+++ b/web_2.html
@@ -4,7 +4,7 @@
 <!-- 	 <script>  window['optimizely'] = window['optimizely'] || [];
 window.optimizely.push(['visitorId', 'the_visitor_id_123']); 
 </script> -->
-  <script>
+<!--   <script>
     // Gán visitorId vào window
     window.visitorId = "the_visitor_id_123";
 
@@ -16,7 +16,8 @@ window.optimizely.push(['visitorId', 'the_visitor_id_123']);
             visitorId: window.visitorId
         }
     });
-</script>
+</script> -->
+	  <script type="javascript">    window.localStorage.setItem('some_id_key123', "the_visitor_id_12345");</script>
 
     <meta charset='utf-8'>
     <meta content='IE=edge' http-equiv='X-UA-Compatible'>
