--- a/web_2.html
+++ b/web_2.html
@@ -17,7 +17,7 @@ window.optimizely.push(['visitorId', 'the_visitor_id_123']);
         }
     });
 </script> -->
-	  <script type="javascript">    window.localStorage.setItem('some_id_key123', "the_visitor_id_12345");</script>
+	  <script type="javascript">    window.localStorage.setItem('visitorId', "the_visitor_id_12345");</script>
 
     <meta charset='utf-8'>
     <meta content='IE=edge' http-equiv='X-UA-Compatible'>
