--- a/web_2.html
+++ b/web_2.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang='en'>
   <head>
-<!-- 	 <script>  window['optimizely'] = window['optimizely'] || [];
+<!-- 	  <script>  window['optimizely'] = window['optimizely'] || [];
 window.optimizely.push(['visitorId', 'the_visitor_id_123']); 
-	  window.visitorId = "the_visitor_id_123";
+	  window.visitorId = "the_visitor_id_123"; -->
+	  
 	  <script type="javascript">    window.localStorage.setItem('visitorId', "the_visitor_id_12345");</script>
 
     <meta charset='utf-8'>
