--- a/web_2.html
+++ b/web_2.html
@@ -2,10 +2,10 @@
 <html lang='en'>
   <head>
 <!-- 	  <script>  window['optimizely'] = window['optimizely'] || [];
-window.optimizely.push(['visitorId', 'the_visitor_id_123']); 
-	  window.visitorId = "the_visitor_id_123"; -->
+window.optimizely.push(['visitorId', 'the_visitor_id_123']);  -->
+	  window.visitorId = "the_visitor_id_123";
 	  
-	  <script type="javascript">    window.localStorage.setItem('visitorId', "the_visitor_id_12345");</script>
+<!-- 	  <script type="javascript">    window.localStorage.setItem('visitorId', "the_visitor_id_12345");</script> -->
 
     <meta charset='utf-8'>
     <meta content='IE=edge' http-equiv='X-UA-Compatible'>
