--- a/web_2.html
+++ b/web_2.html
@@ -3,7 +3,7 @@
   <head>
 <!-- 	  <script>  window['optimizely'] = window['optimizely'] || [];
 window.optimizely.push(['visitorId', 'the_visitor_id_123']);  -->
-	  window.visitorId = "the_visitor_id_123";
+	  <script type="javascript"> window.visitorId = "the_visitor_id_123"; </script>
 	  
 <!-- 	  <script type="javascript">    window.localStorage.setItem('visitorId', "the_visitor_id_12345");</script> -->
 
