--- a/web_1.html
+++ b/web_1.html
@@ -3,7 +3,7 @@
 	<head>
 		<script>
 	window['optimizely'] = window['optimizely'] || [];
-window.optimizely.push(['setUserId', 'user123']); 
+window.optimizely.push(['visitorId', 'user123']); 
 </script>
     <meta charset='utf-8'>
     <meta content='IE=edge' http-equiv='X-UA-Compatible'>
