--- a/web_2.html
+++ b/web_2.html
@@ -2,9 +2,9 @@
 <html lang='en'>
   <head>
 
-<!-- 	  <script type="javascript"> window.visitorId = "the_visitor_id_123"; </script> -->
+	  <script type="javascript"> window.visitorId = "the_visitor_id_123"; </script>
 	  
-<script type="javascript"> localStorage.setItem("visitorId", "Tom"); </script> 
+
 
     <meta charset='utf-8'>
     <meta content='IE=edge' http-equiv='X-UA-Compatible'>
