--- a/web_1.html
+++ b/web_1.html
@@ -2,8 +2,9 @@
 <html lang='en'>
 	<head>
 <!-- 		 <script type="javascript"> window.visitorId = "the_visitor_id_123"; </script> -->
-		window['optimizely'] = window['optimizely'] || [];
-		<script type="javascript"> window.visitorId ='hoa123' </script>
+		<script type="javascript"> window['optimizely'] = window['optimizely'] || [];
+		 window.visitorId ='hoa123'
+		</script>
 		
     <meta charset='utf-8'>
     <meta content='IE=edge' http-equiv='X-UA-Compatible'>
