--- a/web_3.html
+++ b/web_3.html
@@ -3,8 +3,10 @@
 	<head>
 		<script src="https://cdn.optimizely.com/js/5422374802685952.js"></script>
 <!-- 		 <script type="javascript"> window.visitorId = "the_visitor_id_123"; </script> -->
-		<script type="javascript"> window['optimizely'] = window['optimizely'] || [];
-		 window.visitorId ='hoa123';
+		<script> window['optimizely'] = window['optimizely'] || [];
+		 
+			window.visitorId ='hoa123';
+			
 		</script>
 		
     <meta charset='utf-8'>
