--- a/visitorID.html
+++ b/visitorID.html
@@ -3,7 +3,7 @@
 	<head>
     <script src="https://cdn.optimizely.com/js/5189255018840064.js"></script>
 
-		<script> window['optimizely'] = window['optimizely'] || [];
+		<script type="javascript"> window['optimizely'] = window['optimizely'] || [];
 		 
 			window.visitorId ='hoa123';
 			
