--- a/visitorID.html
+++ b/visitorID.html
@@ -3,11 +3,11 @@
 	<head>
     <script src="https://cdn.optimizely.com/js/5189255018840064.js"></script>
 
-		<script type="javascript"> window['optimizely'] = window['optimizely'] || [];
-		 
-			window.visitorId ='hoa123';
-			
-		</script>
+		<script type="text/javascript">
+    window['optimizely'] = window['optimizely'] || [];
+    window.visitorId = 'hoa123';
+</script>
+
 		
     <meta charset='utf-8'>
     <meta content='IE=edge' http-equiv='X-UA-Compatible'>
