--- a/visitorID.html
+++ b/visitorID.html
@@ -3,12 +3,10 @@
 	<head>
     <script src="https://cdn.optimizely.com/js/5189255018840064.js"></script>
 
-		<script type="text/javascript">
+<script type="text/javascript">
     window['optimizely'] = window['optimizely'] || [];
-    window.visitorId = 'hoa123';
-</script>
-
-		
+    window.visitorId = 'hoa123'; </script>
+	
     <meta charset='utf-8'>
     <meta content='IE=edge' http-equiv='X-UA-Compatible'>
     <meta content='width=device-width, initial-scale=1' name='viewport'>
