--- a/web_1.html
+++ b/web_1.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html lang='en'>
 	<head>
-<!-- 		 <script type="javascript"> window.visitorId = "the_visitor_id_123"; </script> -->
-		<script type="javascript"> window['optimizely'] = window['optimizely'] || [];
-		 window.visitorId ='hoa123'
-		</script>
+<script type="text/javascript"> window.visitorId = "the_visitor_id_123"; </script>
 		
     <meta charset='utf-8'>
     <meta content='IE=edge' http-equiv='X-UA-Compatible'>
