--- a/visitorID.html
+++ b/visitorID.html
@@ -2,10 +2,12 @@
 <html lang='en'>
 	<head>
     <script src="https://cdn.optimizely.com/js/5189255018840064.js"></script>
+		
+		<script type="text/javascript"> window.visitorId = "the_visitor_id_123"; </script>
 
-<script type="text/javascript">
+<!-- <script type="text/javascript">
     window['optimizely'] = window['optimizely'] || [];
-    window.visitorId = 'hoa123'; </script>
+    window.visitorId = 'hoa123'; </script> -->
 	
     <meta charset='utf-8'>
     <meta content='IE=edge' http-equiv='X-UA-Compatible'>
