--- a/visitorID.html
+++ b/visitorID.html
@@ -5,10 +5,13 @@
 		
 		<script type="text/javascript"> window.visitorId = "the_visitor_id_123"; </script>
 		<script src="https://cdn.optimizely.com/js/5189255018840064.js"></script>
-		{
-  "accountType": "Premium",
-  "lifetimeValue": 500
-}
+<script type="text/javascript">
+    const userInfo = {
+        "accountType": "Premium",
+        "lifetimeValue": 500
+    };
+    console.log(userInfo);
+</script>
 
 <!-- <script type="text/javascript">
     window['optimizely'] = window['optimizely'] || [];
