--- a/web_2.html
+++ b/web_2.html
@@ -2,7 +2,7 @@
 <html lang='en'>
   <head>
 
-	  <script type="javascript"> window.visitorId = "the_visitor_id_123"; </script>
+	 <script type="text/javascript"> window.visitorId = "the_visitor_id_123"; </script>
 	  
 
 
