--- a/web_2.html
+++ b/web_2.html
@@ -2,8 +2,8 @@
 <html lang='en'>
   <head>
 
-	 <script type="text/javascript"> window.visitorId = "the_visitor_id_123"; </script>
-	  
+<!-- 	 <script type="text/javascript"> window.visitorId = "the_visitor_id_123"; </script> -->
+	  <script type="text/javascript"> localStorage.setItem("myCat", "Tom"); </script>
 
 
     <meta charset='utf-8'>
