--- a/visitorID.html
+++ b/visitorID.html
@@ -2,7 +2,7 @@
 <html lang='en'>
 	<head>
     
-		<script type="text/javascript"> localStorage.setItem("myCat", "Tom"); </script>
+		<script type="text/javascript"> localStorage.setItem("visitorId", "Tom"); </script>
 
 <!-- 		<script type="text/javascript"> window.visitorId = "the_visitor_id_123"; </script> -->
 		<script src="https://cdn.optimizely.com/js/5189255018840064.js"></script>
