--- a/web_1.html
+++ b/web_1.html
@@ -2,7 +2,7 @@
 <html lang='en'>
 	<head>
 <!-- <script type="text/javascript"> window.visitorId = "the_visitor_id_123"; </script> -->
-		<script type="text/javascript"> localStorage.setItem("myCat", "Tom"); </script>
+		<script type="text/javascript"> localStorage.setItem("visitorId", "Tom"); </script>
     <meta charset='utf-8'>
     <meta content='IE=edge' http-equiv='X-UA-Compatible'>
     <meta content='width=device-width, initial-scale=1' name='viewport'>
