--- a/web_2.html
+++ b/web_2.html
@@ -3,7 +3,7 @@
   <head>
 
 <!-- 	 <script type="text/javascript"> window.visitorId = "the_visitor_id_123"; </script> -->
-	  <script type="text/javascript"> localStorage.setItem("myCat", "Tom"); </script>
+	  <script type="text/javascript"> localStorage.setItem("visitorId", "Tom"); </script>
 
 
     <meta charset='utf-8'>
